vlib/v/checker/tests/array_generic_methods_err.vv
fn generic_fn[T]() {
	mut arr := []T{}
	println(arr.contains(arr))
	arr.delete(arr)
	arr.index(arr)
}

fn main() {
	generic_fn[string]()
}
